--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -28,9 +28,10 @@
   		<div class="collapse navbar-collapse" id="menu1" >
   			<ul class="nav navbar-nav">
   				<li><a href="index.html" >Accueil</a></li>
-  				<li><a href="cv.html" >CV</a></li>
-  				<li><a href="calculatrice.html" >Calculatrice</a></li>
-  				<li><a href="calculatrice.html" >Contact</a></li>
+  				<li><a href="../cv.php" >CV</a></li>
+  				<li><a href="../calculatrice.php" >Calculatrice</a></li>
+  				<li><a href="ajax.html" >AJAX</a></li>
+  				<li><a href="contact.html" >Contact</a></li>
           <li class="p_g"><a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook-square fa-4x" aria-hidden="true"></i></a></li>
           <li class="p_d"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></a></li>
   			</ul>
