--- a/bootstrap/ajax.html
+++ b/bootstrap/ajax.html
@@ -46,6 +46,7 @@
               var obj = JSON.parse(datas);
               var i=1;
               var j=1;
+              var s;
               //document.getElementById("resultat").innerHTML +=datas;
               global = datas;
               $.each(obj.todoListes,function(obj1,todo){
